overflow fix attempt#2

--- a/assets/sass/3-modules/_store-menu.sass
+++ b/assets/sass/3-modules/_store-menu.sass
@@ -29,7 +29,6 @@
 			+mq-split
 				margin-bottom: 40px
 	&__leafly-container
-		overflow: scroll
 		-webkit-overflow-scrolling: touch
 		width: 87.952vw
 		height: 80vh
